Hacking on chapter 9 code generation. I reall don't know what is going on...